# PolyNeurons

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  hardhat.config.js  package.json  run-example.sh  test-examples.sh
cognitive-engine/: Cargo.toml
cognitive-engine/src/: engine.rs  main.rs  tasks.rs
cognitive-engine/src/reasoning/: anomaly_detection.rs  market_prediction.rs  mod.rs  risk_scoring.rs
cognitive-engine/tests/: reasoning_tests.rs
contracts/: CognitiveRegistry.sol  ProofOfReasoning.sol
docs/: api.md  architecture.md  deployment.md  testnet-guide.md
examples/: Cargo.toml  register_node.rs  submit_task.rs  submit_task_cheap.rs  view_node.rs  view_task.rs
por-consensus/: Cargo.toml
por-consensus/src/: lib.rs
por-consensus/tests/: consensus_tests.rs
scripts/: deploy-testnet.js  deploy.js
shared/: Cargo.toml
shared/src/: types.rs
test/: CognitiveRegistry.test.js
validator-plugin/: Cargo.toml
validator-plugin/src/: main.rs  plugin.rs  por.rs
