[package]
name = "polyneurons-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "register_node"
path = "register_node.rs"

[[example]]
name = "submit_task"
path = "submit_task.rs"

[dependencies]
tokio = { workspace = true }
ethers = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
